classDiagram
    class Task {
        +int task_id
        +str title
        +int duration
        +int priority
        +str category
        +str frequency
        +str start_time
        +date due_date
        +bool completed
        +edit_task(**kwargs)
        +mark_complete()
    }

    class Pet {
        +int pet_id
        +str name
        +str species
        +int age
        +str notes
        +list tasks
        +update_info(**kwargs)
        +add_task(task)
        +get_tasks()
    }

    class Owner {
        +int owner_id
        +str name
        +int available_time
        +dict preferences
        +list pets
        +set_available_time(minutes)
        +update_preferences(prefs)
        +add_pet(pet)
        +get_all_tasks()
    }

    class Scheduler {
        +Owner owner
        +list daily_plan
        +list skipped
        +list conflicts
        +add_task(pet, task)
        +edit_task(task_id)
        +complete_and_reschedule(task_id)
        +sort_by_time(tasks)
        +filter_tasks(pet_name, completed)
        +get_tasks_by_pet(pet_name)
        +get_tasks_by_status(completed)
        +get_todays_tasks()
        +reset_daily_tasks()
        +detect_conflicts()
        +generate_plan()
        +explain_plan()
        +get_total_scheduled_time()
    }

    Owner "1" *-- "many" Pet : owns
    Pet "1" *-- "many" Task : has
    Scheduler "1" --> "1" Owner : reads from
